# homemade-tracer

./: .gitignore  CMakeLists.txt  README.md
inc/: App.h
inc/Common/: Common.h  Helpers.h  pch.h
inc/Geometry/: HitRecord.cuh  HitRecord.h  Hitable.cuh  Hitable.h  HitableList.cuh  HitableList.h  Quadrilateral.cuh  Ray.cuh  Ray.h  Sphere.cuh  Sphere.h  Triangle.cuh  Vector3.cuh  Vector3.h
inc/Material/: Camera.cuh  Camera.h  Diffuse.cuh  Diffuse.h  Glass.cuh  Glass.h  Metallic.cuh  Metallic.h  Scatterable.cuh  Scatterable.h
inc/Rendering/: Renderer.h  Timer.h
src/: App.cpp  RayTracing.cpp  RayTracing.cu
src/Common/: CMakeLists.txt  Common.cpp
src/Common/include/: Common.h
src/Common/src/: Common.cpp
src/Geometry/: CMakeLists.txt  HitableList.cpp  HitableList.cu  Quadrilateral.cu  Sphere.cpp  Sphere.cu  Triangle.cu  Vector3.cpp  Vector3.cu
src/Geometry/include/: HitRecord.h  Hitable.h  HitableList.h  Ray.h  Sphere.h  Vector3.h
src/Geometry/src/: HitableList.cpp  Sphere.cpp  Vector3.cpp
src/Material/: CMakeLists.txt  Diffuse.cpp  Diffuse.cu  Glass.cpp  Glass.cu  Metallic.cpp  Metallic.cu
src/Material/include/: Camera.h  Diffuse.h  Metallic.h  Reflectable.h
src/Material/src/: Diffuse.cpp  Glass.cpp  Metallic.cpp
src/Rendering/: Renderer.cpp  Timer.cpp
